--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-lock-smartcontract",
+  "name": "time-lock-smart-contract",
   "version": "1.0.0",
   "description": "",
   "directories": {
