--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   },
   "scripts": {
     "test:local": "truffle test ./test/test-local/* --network local",
-    "test:kovan": "truffle test ./test/test-kovan/* --network kovan",
-    "start-blank": "rm -rf client/src && cp -rf barebones/src client/",
-    "client": "cd client && npm run start",
+    "compile:local": "truffle compile --reset --network local",
+    "migrate:local": "truffle migrate --reset --network local",
     "console:kovan": "truffle console --network kovan",
     "compile:kovan": "truffle compile --reset --network kovan",
     "migrate:kovan": "truffle migrate --reset --network kovan",
-    "migrate:ropsten": "truffle migrate --reset --network ropsten",
-    "compile:local": "truffle compile --reset --network local",
-    "migrate:local": "truffle migrate --reset --network local"
+    "test:kovan": "truffle test ./test/test-kovan/* --network kovan",
+    "start-blank": "rm -rf client/src && cp -rf barebones/src client/",
+    "client": "cd client && npm run start"
   },
   "author": "masaun",
   "license": "MIT",
